--- a/HTML/Data.html
+++ b/HTML/Data.html
@@ -13,7 +13,7 @@
 
 <body style="background-color:lightgray">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="../index.html">
             <tit>Latitude</tit>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
