--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Dashboard</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="HTML/style.css">
 </head>
 
 <body style="background-color:lightgray">
@@ -28,17 +28,17 @@
                         Plots
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="MaxTemp.html">Max. Temperature</a>
-                        <a class="dropdown-item" href="Humidity.html">Humidity</a>
-                        <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
-                        <a class="dropdown-item" href="WindSpeed.html">Wind Speed</a>
+                        <a class="dropdown-item" href="HTML/MaxTemp.html">Max. Temperature</a>
+                        <a class="dropdown-item" href="HTML/Humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="HTML/Cloudiness.html">Cloudiness</a>
+                        <a class="dropdown-item" href="HTML/WindSpeed.html">Wind Speed</a>
                     </div>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="Comparison.html">Comparison</a>
+                    <a class="nav-link" href="HTML/Comparison.html">Comparison</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Data.html">Data</a>
+                    <a class="nav-link" href="HTML/Data.html">Data</a>
                 </li>
             </ul>
         </div>
@@ -54,7 +54,7 @@
                 <div class="col-md-6 col-sm-12">
                     <div class="thumbnail">
                         <img class="float-left" style="border: none; padding: 10px; background-color: white;"
-                            src="../Resources/assets/images/Fig1.png" width="100%" alt="temperature">
+                            src="Resources/assets/images/Fig1.png" width="100%" alt="temperature">
                     </div>
                 </div>
 
@@ -79,22 +79,22 @@
                 <hr>
                 <div class="row">
                     <div class="col-md-6 col-3">
-                        <a href="MaxTemp.html"><img src="../Resources/assets/images/Fig1.png" alt="Lattitude vs. Temp"
+                        <a href="HTML/MaxTemp.html"><img src="Resources/assets/images/Fig1.png" alt="Lattitude vs. Temp"
                                 height="180px" width="100%"></a>
                         Max Temperature
                     </div>
                     <div class="col-md-6 col-3">
-                        <a href="Humidity.html"><img src="../Resources/assets/images/Fig2.png"
+                        <a href="HTML/Humidity.html"><img src="Resources/assets/images/Fig2.png"
                                 alt="Lattitude vs. Humidity" height="180px" width="100%"></a>
                         Humidity
                     </div>
                     <div class="col-md-6 col-3">
-                        <a href="Cloudiness.html"><img src="../Resources/assets/images/Fig3.png"
+                        <a href="HTML/Cloudiness.html"><img src="Resources/assets/images/Fig3.png"
                                 alt="Lattitude vs. Cloudiness" height="180px" width="100%"></a>
                         Cloudiness
                     </div>
                     <div class="col-md-6 col-3">
-                        <a href="WindSpeed.html"><img src="../Resources/assets/images/Fig4.png"
+                        <a href="HTML/WindSpeed.html"><img src="Resources/assets/images/Fig4.png"
                                 alt="Lattitude vs. Wind Speed" height="180px" width="100%"></a>
                         Wind Speed
                     </div>
